<resources>
    <string name="app_name">FirstTrackit Operator</string>
    <string name="Welcome_text">Welcome Back,</string>
    <string name="Sigin">Sign in to Continue</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="otp">Enter your mail Id to get OTP  </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="company_id">Company Name</string>
    <string name="operator_code">Operator Code</string>
    <string name="customer_name">Operator Name</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="line_no">Line Number</string>
    <string name="quantity">Qty</string>
    <string name="order_started">Order Started</string>
    <string name="scheduled">Scheduled</string>
    <string name="cleaning">Cleaning</string>
    <string name="cutting">Cutting</string>
    <string name="Packing">Packing</string>
    <string name="sigin">Sign in</string>
    <string name="job_cofirmation">Job Confirmation</string>
    <string name="empty_data">No Data is Found</string>
    <string name="exepction">Exception</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="splash_screen_appname">First Track It</string>
    <string-array name="tab_A">
        <item>Item 1A</item>
        <item>Item 1B</item>
        <item>Item 1C</item>
        <item>Item 1D</item>
        <item>Item 1E</item>
        <item>Item 1F</item>
        <item>Item 1G</item>
        <item>Item 1H</item>
        <item>Item 1I</item>
        <item>Item 1J</item>
        <item>Item 1K</item>
        <item>Item 1L</item>
        <item>Item 1M</item>
        <item>Item 1N</item>
        <item>Item 1O</item>
        <item>Item 1P</item>
        <item>Item 1Q</item>
        <item>Item 1R</item>
        <item>Item 1S</item>
        <item>Item 1T</item>
    </string-array>

    <string-array name="tab_B">
        <item>Item 2A</item>
        <item>Item 2B</item>
        <item>Item 2C</item>
        <item>Item 2D</item>
        <item>Item 2E</item>
        <item>Item 2F</item>
        <item>Item 2G</item>
        <item>Item 2H</item>
        <item>Item 2I</item>
        <item>Item 2J</item>
        <item>Item 2K</item>
        <item>Item 2L</item>
        <item>Item 2M</item>
        <item>Item 2N</item>
        <item>Item 2O</item>
        <item>Item 2P</item>
        <item>Item 2Q</item>
        <item>Item 2R</item>
        <item>Item 2S</item>
        <item>Item 2T</item>
    </string-array>

    <string-array name="tab_C">
        <item>Item 3A</item>
        <item>Item 3B</item>
        <item>Item 3C</item>
        <item>Item 3D</item>
        <item>Item 3E</item>
        <item>Item 3F</item>
        <item>Item 3G</item>
        <item>Item 3H</item>
        <item>Item 3I</item>
        <item>Item 3J</item>
        <item>Item 3K</item>
        <item>Item 3L</item>
        <item>Item 3M</item>
        <item>Item 3N</item>
        <item>Item 3O</item>
        <item>Item 3P</item>
        <item>Item 3Q</item>
        <item>Item 3R</item>
        <item>Item 3S</item>
        <item>Item 3T</item>
    </string-array>
</resources>
