<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/job_status_relative"
    android:layout_height="match_parent"
    android:background="#f5f7ff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/xxhdpi_5"
        android:layout_above="@+id/relat">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f5f7ff"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:src="@drawable/ic_completed"
                        android:layout_marginLeft="10dp"
                        />
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginLeft="@dimen/t_xxh_15"
                        android:fontFamily="@font/sourcesanspro_semibold"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/text_colour"
                        android:textStyle="bold"
                        android:id="@+id/tv_process_order"
                        android:letterSpacing="0.02"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/order_started"
                        />
                </LinearLayout>
                <View
                    android:layout_width="@dimen/xxhdpi_50"
                    android:layout_height="@dimen/xxhdpi_50"
                    android:layerType="software"
                    android:background="@drawable/vertical_dashed_line"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:src="@drawable/ic_scheduled"
                        android:layout_marginLeft="10dp"
                        />
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/sourcesanspro_semibold"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/text_colour"
                        android:layout_marginLeft="@dimen/t_xxh_15"
                        android:id="@+id/tv_process_schedule"
                        android:letterSpacing="0.02"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/scheduled"
                        />
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/process_recycle">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relat"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/t_xxh_15"
        android:layout_marginEnd="@dimen/t_xxh_15">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textAllCaps="false"
            android:id="@+id/btn_exception"
            android:textColor="#9d2d74"
            android:text="@string/exepction"
            android:background="@drawable/exception_btn"/>
    </RelativeLayout>
</RelativeLayout>