<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#f5f7ff"
    android:id="@+id/job_detail_relative"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/work_board">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/t_xxh_15"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/t_xxh_14"
            android:layout_height="wrap_content"
            android:id="@+id/iv_back"
            android:layout_marginLeft="@dimen/t_xxh_15"
            android:src="@drawable/ic_back"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/gotham_medium"
                android:layout_marginLeft="@dimen/t_xxh_20"
                android:textColor="#2699fb"
                android:lineSpacingExtra="10sp"
                android:text="Job No:"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/gotham_medium"
                android:textStyle="bold"
                android:id="@+id/tv_job_id"
                android:singleLine="true"
                android:textColor="#2699fb"
                android:lineSpacingExtra="10sp"
                android:text=" 436567434"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/t_xxh_22"
        android:layout_marginLeft="@dimen/t_xxh_15"
        android:gravity="center_horizontal"
        android:layout_marginRight="@dimen/t_xxh_15"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_rectangle"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="9dp"
                android:singleLine="true"
                 android:layout_gravity="center_vertical"
                android:textColor="#c1c1c1"
                android:fontFamily="@font/sourcesanspro_regular"
                android:layout_marginLeft="@dimen/t_xxh_14"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="6sp"
                android:text="@string/customer_name" />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:id="@+id/tv_customer_name"
                android:textColor="#2c3550"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginLeft="@dimen/t_xxh_14"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="2sp"
                android:text="Joseph Kuruvila"
                android:layout_marginBottom="@dimen/t_xxh_20"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_rectangle"
            android:layout_marginLeft="29dp"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="9dp"
                android:singleLine="true"
                android:textColor="#c1c1c1"
                android:fontFamily="@font/sourcesanspro_regular"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="6sp"
                android:text="@string/purchase_order"
                />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#2c3550"
                android:singleLine="true"
                android:textStyle="bold"
                android:layout_marginLeft="11dp"
                android:letterSpacing="0.02"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:lineSpacingExtra="2sp"
                android:id="@+id/tv_purchase_order"
                android:layout_marginTop="2dp"
                android:text="56789034"
                android:layout_marginBottom="@dimen/t_xxh_20"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/t_xxh_22"
        android:layout_marginLeft="@dimen/t_xxh_15"
        android:gravity="center_horizontal"
        android:layout_marginRight="@dimen/t_xxh_15"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_rectangle"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:layout_gravity="center_vertical"
                android:textColor="#c1c1c1"
                android:layout_marginLeft="@dimen/t_xxh_14"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="6sp"
                android:text="@string/line_no"

                />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#2c3550"
                android:layout_marginLeft="@dimen/t_xxh_14"
                android:letterSpacing="0.02"
                android:textStyle="bold"
                android:singleLine="true"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:layout_marginTop="2dp"
                android:lineSpacingExtra="2sp"
                android:id="@+id/tv_line_no"
                android:text="3424"
                android:layout_marginBottom="@dimen/t_xxh_20"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_rectangle"
            android:layout_marginLeft="29dp"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textColor="#c1c1c1"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="6sp"
                android:text="@string/quantity" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#2c3550"
                    android:layout_marginLeft="11dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="2sp"
                    android:layout_marginTop="2dp"
                    android:id="@+id/tv_quantity"
                    android:text="1000"
                    android:layout_marginBottom="@dimen/t_xxh_20"
                    />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#2c3550"
                   android:layout_marginLeft="@dimen/xxhdpi_5"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:textStyle="bold"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="2sp"
                    android:layout_marginTop="2dp"
                    android:text="Pcs"
                    android:layout_marginBottom="@dimen/t_xxh_20"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/job_linear"
        android:layout_marginTop="@dimen/t_xxh_26">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:textColor="@color/jobstatus_titlecolur"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="-4sp"
            android:text="@string/job_cofirmation"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:layout_marginTop="6dp"
            android:textColor="@color/signin_textcolour"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="6sp"
            android:text="Is these Above Information are Correct?"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="23dp"
        android:id="@+id/linear_confirm"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_rectangle"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/yes_button"
                android:textSize="13sp"
                android:textColor="#ffffff"
                android:id="@+id/btn_yes"
                android:letterSpacing="0.02"
                android:fontFamily="@font/sourcesanspro_regular"
                android:lineSpacingExtra="4sp"
                android:text="Yes"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_rectangle"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginLeft="@dimen/xxhdpi_30"
                android:textColor="#3b7ded"
                android:letterSpacing="0.02"
                android:id="@+id/btn_no"
                android:fontFamily="@font/sourcesanspro_regular"
                android:lineSpacingExtra="4sp"
                android:text="No"
                android:background="@drawable/no_button"
                />

        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

